# fastapi-ddd-template

./: Dockerfile  README.md  alembic.ini  pyproject.toml
app/: config.py  exception.py  main.py
app/core/: __init__.py
app/core/database/: __init__.py  base_model.py  base_repository.py  connection.py
app/users/: __init__.py  dependency.py
app/users/auth/: __init__.py  router.py  service.py
app/users/user/: __init__.py  model.py  repository.py  router.py  service.py
migrations/: env.py
