[tool.poetry]
name = "fastapi-ddd-template"
version = "0.1.0"
description = "Template for FastAPI projects using DDD"
authors = ["oianshek <oiansheks@gmai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.113.0"
alembic = "^1.13.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.34"}
pydantic-settings = "^2.4.0"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
